# ahjoorxmr-contract

./: PR_DESCRIPTION_392.md  PR_DESCRIPTION_400.md  bash.exe.stackdump  cargo_error.txt  cargo_error2.txt  deny.toml  makefile  readMe.md
.cargo/: audit.toml
.github/workflows/: audit.yml
contracts/ahjoor-errors/: Cargo.toml  errors.json
contracts/ahjoor-errors/src/: lib.rs
contracts/ahjoor-escrow/src/: events.rs  lib.rs  test.rs  test_auto_renewal.rs  test_bounty_board.rs  test_bounty_milestone.rs  test_cooling_off.rs  test_dispute_timeout.rs  test_inspector.rs  test_milestone_bps.rs  test_seller_veto.rs  test_token_whitelist.rs
contracts/ahjoor-payments/src/: events.rs  lib.rs  multi_token_invoice.rs  multi_token_invoice_impl.rs  pre_approved_spending_impl.rs  test.rs  test_buyer_trust_tier.rs  test_consent.rs  test_cooling_off.rs  test_dao_mediation.rs  test_evidence_window.rs  test_external_id_multisig_voucher.rs  test_loyalty_points.rs  test_merchant_ban.rs  test_notification_keys.rs  test_oracle_staleness.rs  test_retry_queue.rs  test_spending_limit.rs
contracts/ahjoor-refund/src/: events.rs  lib.rs  test.rs  test_abuse_score.rs  test_counter_offer.rs  test_cross_contract_refund.rs  test_evidence_window.rs  test_reserve_fund.rs  test_token_whitelist.rs
contracts/ahjoor-rosca/: FEATURE_IMPLEMENTATION.md
contracts/ahjoor-token-whitelist/: Cargo.toml
contracts/integration-tests/: Cargo.toml
contracts/integration-tests/src/: lib.rs  rosca_payout_flow.rs
docs/: escrow-dispute-flow.md  migration-guide.md  payments-flow.md
(+34 files in other folders)
