[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib"]

[dependencies]
soroban-sdk = "21.0.0"  # match the version pinned in the rosca contract's Cargo.toml

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }
ahjoor-rosca-contract = { path = "../rosca", features = ["testutils"] }  # adjust path/name

[features]
testutils = []